--- a/src/index.scss
+++ b/src/index.scss
@@ -211,4 +211,131 @@ h2 {
       transition: 0.3s ease-in-out;
     }
   }
+
+  .navBarWithBg {
+    background-color: var(--secondary-color);
+    padding: 0.5rem 1rem;
+    box-shadow: var(--box-shadow);
+  }
+}
+
+// Home section styling
+.home {
+  padding-top: 10rem;
+  text-align: center;
+  gap: 2rem;
+  flex-direction: column;
+
+  .mainText {
+    color: var(--black-color);
+    font-weight: 600;
+    font-size: 15px;
+    line-height: 2.5rem;
+
+    .mainTextHeading {
+      color: var(--first-color);
+    }
+  }
+
+  .homeImages {
+    width: 100%;
+    margin: 1rem auto 0;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    border-radius: 5rem;
+
+    .videoDiv {
+      width: 100%;
+      .video {
+        border-radius: 10rem;
+      }
+    }
+
+    .plane {
+      position: absolute;
+      width: 100%;
+      top: -10%;
+    }
+  }
+}
+
+// Search section styling
+.search {
+  .sectionContainer {
+    width: 100%;
+    padding: 1.5rem;
+    border: 2px solid var(--grey-bg);
+    border-radius: 16px;
+    row-gap: 2rem;
+    .btns {
+      background-color: var(--secondary-color);
+      padding: 0.5rem;
+      border-radius: 1rem;
+      flex-direction: column;
+      width: 100%;
+      margin: auto;
+
+      .singleBtn {
+        padding: 0.8rem 1.5rem;
+        font-size: 13px;
+        border-radius: 3rem;
+        width: 80%;
+        text-align: center;
+
+        &:hover {
+          background-color: var(--first-color);
+          color: var(--white-color);
+          font-weight: 500;
+          transition: 0.3s ease;
+        }
+      }
+      .active {
+        background-color: var(--first-color);
+        color: var(--white-color);
+        font-weight: 500;
+      }
+    }
+
+    .searchInputs {
+      width: 100%;
+      justify-content: center;
+      flex-direction: column;
+
+      .singleInput {
+        .iconDiv {
+          padding: 16px 10px;
+          border-radius: 3rem;
+          background-color: var(--secondary-color);
+          margin-right: 1rem;
+
+          .icon {
+            color: var(--black-color);
+            opacity: 0.7;
+          }
+        }
+
+        .texts {
+          h4 {
+            padding-top: 0;
+            padding-bottom: 0;
+            color: var(--black-color);
+            font-weight: 600;
+          }
+
+          input {
+            width: 95%;
+            border: none;
+            outline: none;
+            background: transparent;
+
+            &::placeholder {
+              font-size: 12px;
+              opacity: 0.5;
+            }
+          }
+        }
+      }
+    }
+  }
 }
