--- a/src/index.scss
+++ b/src/index.scss
@@ -62,7 +62,7 @@ li {
   align-items: center;
 }
 
-.gird {
+.grid {
   display: grid;
   align-items: center;
 }
@@ -97,7 +97,8 @@ input {
 
 h4 {
   padding: 1rem 0;
-  font-weight: var(--black-color);
+  font-weight: 600;
+  color: var(--first-color)
 }
 
 h2 {
@@ -334,6 +335,55 @@ h2 {
               opacity: 0.5;
             }
           }
+        }
+      }
+    }
+  }
+}
+
+// Support section styling
+.support {
+  .sectionContainer {
+    .titlesDiv {
+      text-align: center;
+      small {
+        letter-spacing: 0.8rem;
+        text-transform: uppercase;
+        font-size: 13px;
+        color: var(--black-color);
+        line-height: 1.5rem;
+      }
+    }
+    .infoDiv {
+      margin-top: 2rem;
+      gap: 1.5rem;
+      .textDiv {
+        gap: 1.5rem;
+        .singleInfo {
+          .number {
+            background-color: var(--first-color);
+            padding: 5px 12px;
+            width: 40px;
+            border-radius: 3rem;
+            text-align: center;
+            font-size: 13px;
+            font-weight: 600;
+            color: var(--white-color);
+          }
+          .colorOne {
+            background-color: var(--color-one);
+          }
+          .colorTwo {
+            background-color: var(--color-two);
+          }
+        }
+      }
+      .imgDiv{
+        margin: auto;
+        img{
+          width: 100%;
+          max-width: 420px;
+          border-radius: 1.5rem;
         }
       }
     }
