--- a/src/index.scss
+++ b/src/index.scss
@@ -98,7 +98,7 @@ input {
 h4 {
   padding: 1rem 0;
   font-weight: 600;
-  color: var(--first-color)
+  color: var(--first-color);
 }
 
 h2 {
@@ -378,13 +378,272 @@ h2 {
           }
         }
       }
-      .imgDiv{
+      .imgDiv {
         margin: auto;
-        img{
+        img {
           width: 100%;
           max-width: 420px;
           border-radius: 1.5rem;
         }
+      }
+    }
+  }
+}
+
+// Info section styling
+.info {
+  background-color: var(--secondary-color);
+  .infoContainer {
+    .titlesDiv {
+      flex-direction: column;
+      text-align: center;
+      gap: 1.5rem;
+      justify-content: space-between;
+    }
+    .cardsDiv {
+      gap: 1.5rem;
+      margin-top: 3rem;
+      .singleCard {
+        background-color: var(--white-color);
+        padding: 3rem 2rem;
+        border-radius: 10rem;
+        gap: 1rem;
+        text-align: center;
+        margin: auto;
+        height: 320px;
+        width: 90%;
+        max-width: 250px;
+
+        .iconDiv {
+          justify-content: center;
+          margin: auto;
+          background-color: var(--first-color);
+          width: max-content;
+          height: 55px;
+          padding: 1rem;
+          border-radius: 3rem;
+          .icon {
+            color: var(--white-color);
+          }
+        }
+        .cardTitle {
+          color: var(--black-color);
+          font-weight: 600;
+          padding-top: 2rem;
+          padding-bottom: 1rem;
+        }
+        .colorOne {
+          background-color: var(--color-one);
+        }
+        .colorTwo {
+          background-color: var(--color-two);
+        }
+      }
+    }
+  }
+}
+
+// Lounge section styling
+.lounge {
+  .sectionContainer {
+    gap: 1.5rem;
+    .imgDiv {
+      margin: auto;
+      img {
+        width: 100%;
+        max-width: 430px;
+      }
+    }
+    .grids {
+      margin-top: 1rem;
+      gap: 1.5rem;
+      .singleGrid {
+        .gridTitle {
+          display: block;
+          padding-bottom: 0.5rem;
+          font-weight: 600;
+          color: var(--black-color);
+        }
+      }
+    }
+  }
+}
+
+// Travelers section styling
+.travelers {
+  .sectionContainer {
+    text-align: center;
+    .travelersContainer {
+      margin-top: 1rem;
+      gap: 1.5rem;
+      .singleTraveler {
+        position: relative;
+        height: 320px;
+        width: 85%;
+        max-width: 250px;
+        overflow: hidden;
+        border-radius: 10rem;
+        gap: 1rem;
+        margin: auto;
+        .destinationImage,
+        .travelerImage,
+        .travelerName {
+          position: absolute;
+        }
+        .destinationImage {
+          height: 100%;
+          width: 100%;
+          top: 0;
+          right: 0;
+          left: 0;
+          bottom: 0;
+          object-fit: cover;
+        }
+        .travelerImage {
+          height: 50px;
+          width: 50px;
+          object-fit: cover;
+          border-radius: 50%;
+          bottom: 30px;
+          left: 40%;
+          transform: translateX(-40%);
+          border: 5px solid rgba(225, 225, 225, 0.637);
+          transition: var(--transition);
+          animation: animated 2.3s infinite;
+        }
+        @keyframes animated {
+          0% {
+            transform: translateY(0px);
+          }
+          50% {
+            transform: translateY(8px);
+          }
+          100% {
+            transform: translateY(0px);
+          }
+        }
+
+        .travelerName {
+          bottom: -100%;
+          width: 100%;
+          height: max-content;
+          background-color: var(--white-color);
+          padding: 1.5rem 1rem;
+          transition: var(--transition);
+          animation: animatedBorders 2.3s infinite;
+
+          span {
+            display: block;
+            color: var(--black-color);
+            font-weight: 600;
+          }
+
+          p {
+            color: var(--first-color);
+            font-style: italic;
+          }
+        }
+        @keyframes animatedBorders {
+          0% {
+            border-radius: 0rem;
+          }
+          50% {
+            border-radius: 2rem;
+          }
+          100% {
+            border-radius: 0rem;
+          }
+        }
+
+        &:hover {
+          .travelerName {
+            bottom: 0;
+            transition: 0.5s ease-in-out;
+          }
+          .travelerImage {
+            bottom: 110px;
+            transition: 0.5s ease-in-out;
+          }
+        }
+      }
+    }
+  }
+}
+
+// Subscribe section styling
+.subscribe {
+  background-color: var(--secondary-color);
+  .sectionContainer {
+    text-align: center;
+    .inputDiv {
+      margin-top: 1rem;
+      flex-direction: column;
+      background-color: var(--white-color);
+      border-radius: 1rem;
+      input {
+        border: none;
+        outline: none;
+        background: transparent;
+
+        &::placeholder {
+          font-size: 13px;
+          opacity: 0.5;
+        }
+      }
+      .btn {
+        width: 100%;
+      }
+    }
+  }
+}
+
+// Footer section styling
+.footer {
+  background-color: var(--secondary-color);
+  .sectionContainer {
+    gap: 2.5rem;
+    .gridOne {
+      gap: 1rem;
+      justify-content: center;
+      margin: auto;
+      .logoDiv {
+        .logo {
+          width: 20%;
+        }
+      }
+      .socialIcon {
+        margin-top: 1rem;
+        gap: 1rem;
+        .icon {
+          height: 50px;
+          width: 50px;
+          border-radius: 10rem;
+          border: 1px solid var(--border-color);
+          padding: 0.4rem;
+          color: var(--grey-text);
+          &:hover {
+            background-color: var(--first-color);
+            transform: translateY(-7px);
+            transition: var(--transition);
+            border: 1px solid var(--first-color);
+            color: var(--white-color)
+          }
+        }
+      }
+    }
+
+    .footerLinks{
+      display: grid;
+      .linkTitle{
+        color:var(--black-color);
+        font-weight: 500;
+        display: block;
+        padding-bottom: 1rem;
+      }
+      li a{
+        display: block;
+        color: var(--grey-text);
+        transition: var(--transition);
       }
     }
   }
