--- a/src/index.scss
+++ b/src/index.scss
@@ -283,6 +283,7 @@ h2 {
         border-radius: 3rem;
         width: 80%;
         text-align: center;
+        cursor: pointer;
 
         &:hover {
           background-color: var(--first-color);
@@ -302,7 +303,7 @@ h2 {
       width: 100%;
       justify-content: center;
       flex-direction: column;
-
+      gap: 1.5rem;
       .singleInput {
         .iconDiv {
           padding: 16px 10px;
@@ -337,6 +338,9 @@ h2 {
           }
         }
       }
+    }
+    .btnBlock{
+      justify-content: center;
     }
   }
 }
@@ -577,6 +581,7 @@ h2 {
     text-align: center;
     .inputDiv {
       margin-top: 1rem;
+      margin-bottom: 1rem;
       flex-direction: column;
       background-color: var(--white-color);
       border-radius: 1rem;
@@ -626,25 +631,438 @@ h2 {
             transform: translateY(-7px);
             transition: var(--transition);
             border: 1px solid var(--first-color);
-            color: var(--white-color)
+            color: var(--white-color);
           }
         }
       }
     }
 
-    .footerLinks{
+    .footerLinks {
       display: grid;
-      .linkTitle{
-        color:var(--black-color);
+      .linkTitle {
+        color: var(--black-color);
         font-weight: 500;
         display: block;
         padding-bottom: 1rem;
       }
-      li a{
+      li a {
         display: block;
         color: var(--grey-text);
         transition: var(--transition);
+
+        &:hover {
+          transform: translateX(7px);
+          color: var(--first-color);
+        }
       }
     }
   }
+
+  .copyrightDiv {
+    justify-content: center;
+    margin-top: 1.5rem;
+    padding: 1rem;
+    gap: 1rem;
+    border-top: 1px solid var(--grey-text);
+    text-align: center;
+
+    a {
+      color: var(--first-color);
+    }
+  }
+}
+
+// Media queries
+@media screen and (min-width: 480px) {
+  .home {
+    padding-top: 12rem;
+  }
+  .search {
+    .sectionContainer {
+      display: grid;
+      grid-template-columns: repeat(2, 1fr);
+    }
+  }
+  .travelers {
+    .sectionContainer {
+      .travelersContainer {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+  }
+  .subscribe {
+    .sectionContainer {
+      max-width: 80%;
+      margin: auto;
+
+      .inputDiv {
+        flex-direction: row;
+        padding: 0 0.5rem;
+        border-radius: 3rem;
+      }
+    }
+  }
+  .footer {
+    .sectionContainer {
+      align-items: flex-start;
+      grid-template-columns: repeat(2, 1fr);
+      .footerLinks {
+        justify-content: center;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 570px) {
+  .home {
+    .mainText {
+      width: 80%;
+    }
+    .homeImages {
+      .video {
+        border-radius: 15rem;
+      }
+      .plane {
+        position: absolute;
+        width: 95%;
+        top: -8%;
+      }
+    }
+  }
+  .search {
+    .sectionContainer {
+      .btns {
+        border-radius: 3rem;
+        flex-direction: row;
+      }
+    }
+  }
+  .info {
+    .infoContainer {
+      .titlesDiv {
+        flex-direction: row;
+        h2 {
+          text-align: left;
+          max-width: 500px;
+        }
+      }
+      .cardsDiv {
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+  }
+  .lounge {
+    .sectionContainer {
+      .textDiv {
+        .grids {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+  }
+  .subscribe {
+    .sectionContainer {
+      .inputDiv {
+        justify-content: space-between;
+        .btn {
+          max-width: max-content;
+        }
+      }
+    }
+  }
+  .footer {
+    .sectionContainer {
+      padding-top: 2rem;
+      grid-template-columns: repeat(3, 1fr);
+    }
+  }
+}
+
+@media screen and (min-width: 680px) {
+  .home {
+    .mainText {
+      width: 80%;
+    }
+    .homeImages {
+      .videoDiv {
+        width: 80%;
+        .video {
+          height: 100%;
+          width: 100%;
+          border-radius: 15rem;
+        }
+      }
+      .plane {
+        width: 95%;
+        top: -8%;
+      }
+    }
+  }
+  .search {
+    .sectionContainer {
+      .btn {
+        border-radius: 3rem;
+        flex-direction: row;
+      }
+      .searchInputs {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+  }
+  .footer {
+    .sectionContainer {
+      grid-template-columns: repeat(4, 1fr);
+    }
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .navBar {
+    align-items: center;
+    .navBarOne {
+      .none {
+        display: flex;
+        gap: 1.5rem;
+        li {
+          font-size: 13px;
+          gap: 0.5rem;
+          color: var(--text-color);
+          &:hover {
+            color: var(--first-color);
+            text-decoration: underline;
+          }
+        }
+      }
+    }
+    .navBarTwo {
+      justify-content: space-between;
+      align-items: center;
+      .logoDiv {
+        .Logo {
+          max-width: 20%;
+        }
+      }
+      .menu {
+        flex-direction: row;
+        gap: 0.5rem;
+      }
+      .btnOne,
+      .toggleIcon {
+        padding: 0 0.5rem;
+        font-size: 14px;
+        cursor: pointer;
+        color: var(--text-color);
+        font-weight: 600;
+        &:hover {
+          color: var(--first-color);
+          font-weight: 600;
+        }
+      }
+    }
+  }
+
+  .search {
+    .sectionContainer {
+      .btns {
+        width: 70%;
+        border-radius: 3rem;
+        flex-direction: row;
+      }
+      .searchInputs {
+        grid-template-columns: repeat(4, 1fr);
+        .singleInput {
+          width: 100%;
+        }
+      }
+    }
+  }
+  .info {
+    .infoContainer {
+      padding: 0 6rem;
+      .titlesDiv {
+        width: 90%;
+        margin: auto;
+        align-items: center;
+      }
+      .cardsDiv {
+        grid-template-columns: repeat(3, 1fr);
+        .singleCard {
+          max-width: 260px;
+          padding: 3rem 1rem;
+        }
+      }
+    }
+  }
+  .lounge {
+    .sectionContainer {
+      grid-template-columns: repeat(2, 1fr);
+      .textDiv {
+        grid-area: 1;
+        .grids {
+          grid-template-columns: repeat(2, 1fr);
+        }
+      }
+    }
+  }
+  .travelers {
+    .sectionContainer {
+      .travelersContainer {
+        grid-template-columns: repeat(3, 1fr);
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 960px) {
+  .home {
+    padding-top: 13rem;
+    .mainText {
+      width: 70%;
+      padding-bottom: 1.5rem;
+      font-size: 22px;
+      line-height: 4rem;
+    }
+  }
+  .search {
+    .sectionContainer {
+      .searchInputs {
+        grid-template-columns: repeat(5, 1fr);
+      }
+    }
+  }
+  .travelers {
+    .sectionContainer {
+      .travelersContainer {
+        grid-template-columns: repeat(4, 1fr);
+        margin: 3rem 0;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  p {
+    font-size: 15px;
+    line-height: 25px;
+  }
+  h4 {
+    font-size: 20px;
+  }
+  h2 {
+    font-size: 27px;
+  }
+
+  .container {
+    width: 75%;
+    margin: auto;
+  }
+
+  .navBar {
+    .navBarOne,
+    .navBarTwo {
+      padding: 1.5rem 5rem;
+    }
+    .navBarWithBg {
+      padding: 0 5rem;
+    }
+  }
+  .home {
+    .mainText {
+      width: 60%;
+      font-size: 25px;
+      line-height: 4rem;
+    }
+    .homeImages {
+      .videoDiv {
+        width: 90%;
+        height: 300px;
+        .video {
+          height: 100%;
+          width: 100%;
+          object-fit: conver;
+          border-radius: 15rem;
+        }
+      }
+      .plane{
+        width: 100%;
+        top: -10%; 
+      }
+    }
+  }
+  .search{
+    .sectionContainer{
+      .btns{
+        width: 50%;
+      }
+    }
+  }
+}
+
+@media screen and (min-width: 1106px) {
+  .subscribe{
+    .sectionContainer{
+      max-width: 60%;
+    }
+  }
+}
+
+@media screen and (min-width: 1332px){
+  .navBar{
+    .navBarOne{
+      .menu{
+        gap: 1rem;
+        .listItem{
+          padding: 0 1.5rem;
+          font-size: 14px;
+        }
+      }
+    }
+  }
+
+  .support{
+    .sectionContainer{
+      .infoDiv{
+        gap: 1rem;
+        .textDiv{
+          .singleInfo{
+            p{
+              max-width: 500px;
+            }
+          }
+        }
+      }
+    }
+  }
+
+  .subscribe{
+    .sectionContainer{
+      max-width: 50%;
+    }
+  }
+}
+
+@media screen and (min-width: 1440px){
+  .home{
+    .homeImages{
+      .plane{
+        width: 90%;
+        top:-10%;
+      }
+    }
+  }
+}
+
+::selection{
+  background-color: var(--first-color);
+  color: var(--first-color);
+}
+
+::-webkit-scrollbar{
+  width: 10px;
+  background-color: var(--grey-bg);
+}
+
+::-webkit-scrollbar-thumb{
+  background-color: var(--first-color);
+  border-radius: 10px;
 }
