--- a/src/index.scss
+++ b/src/index.scss
@@ -53,13 +53,13 @@ li {
   cursor: pointer;
 }
 
-.none {
-  display: none;
-}
-
 .flex {
   display: flex;
   align-items: center;
+}
+
+.none {
+  display: none;
 }
 
 .grid {
@@ -162,7 +162,7 @@ h2 {
       .navBarMenu {
         position: absolute;
         background-color: var(--secondary-color);
-        padding: 3.5rem;
+        padding: 1.5rem;
         border-radius: 10px;
         top: 5rem;
         right: -50%;
@@ -190,7 +190,7 @@ h2 {
           }
         }
         .btnOne {
-          display: flex;
+          display: block;
           justify-content: center;
           margin: auto;
           margin-top: 1rem;
@@ -320,7 +320,7 @@ h2 {
         .texts {
           h4 {
             padding-top: 0;
-            padding-bottom: 0;
+            padding-bottom: 0.7rem;
             color: var(--black-color);
             font-weight: 600;
           }
@@ -339,7 +339,7 @@ h2 {
         }
       }
     }
-    .btnBlock{
+    .btnBlock {
       justify-content: center;
     }
   }
@@ -387,7 +387,7 @@ h2 {
         img {
           width: 100%;
           max-width: 420px;
-          border-radius: 1.5rem;
+          border-radius: 10%;
         }
       }
     }
@@ -458,15 +458,17 @@ h2 {
         max-width: 430px;
       }
     }
-    .grids {
-      margin-top: 1rem;
-      gap: 1.5rem;
-      .singleGrid {
-        .gridTitle {
-          display: block;
-          padding-bottom: 0.5rem;
-          font-weight: 600;
-          color: var(--black-color);
+    .textDiv {
+      .grids {
+        margin-top: 1rem;
+        gap: 1.5rem;
+        .singleGrid {
+          .gridTitle {
+            display: block;
+            padding-bottom: 0.5rem;
+            font-weight: 600;
+            color: var(--black-color);
+          }
         }
       }
     }
@@ -589,6 +591,7 @@ h2 {
         border: none;
         outline: none;
         background: transparent;
+        padding: 1rem 0.5rem;
 
         &::placeholder {
           font-size: 13px;
@@ -621,7 +624,7 @@ h2 {
         gap: 1rem;
         .icon {
           height: 50px;
-          width: 50px;
+          width: 30px;
           border-radius: 10rem;
           border: 1px solid var(--border-color);
           padding: 0.4rem;
@@ -679,8 +682,10 @@ h2 {
   }
   .search {
     .sectionContainer {
-      display: grid;
-      grid-template-columns: repeat(2, 1fr);
+      .searchInputs {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
     }
   }
   .travelers {
@@ -734,6 +739,16 @@ h2 {
       .btns {
         border-radius: 3rem;
         flex-direction: row;
+      }
+    }
+  }
+  .support {
+    .sectionContainer {
+      .infoDiv {
+        .textDiv {
+          margin-top: 2rem;
+          grid-template-columns: repeat(2, 1fr);
+        }
       }
     }
   }
@@ -845,18 +860,21 @@ h2 {
       .menu {
         flex-direction: row;
         gap: 0.5rem;
+        .listItem {
+          padding: 0 0.5rem;
+          font-size: 14px;
+          cursor: pointer;
+          color: var(--text-color);
+          font-weight: 600;
+          &:hover {
+            color: var(--first-color);
+            font-weight: 600;
+          }
+        }
       }
       .btnOne,
       .toggleIcon {
-        padding: 0 0.5rem;
-        font-size: 14px;
-        cursor: pointer;
-        color: var(--text-color);
-        font-weight: 600;
-        &:hover {
-          color: var(--first-color);
-          font-weight: 600;
-        }
+        display: none;
       }
     }
   }
@@ -871,12 +889,31 @@ h2 {
       .searchInputs {
         grid-template-columns: repeat(4, 1fr);
         .singleInput {
-          width: 100%;
+          .texts{
+            input{
+              width: 100%;
+            }
+          }
         }
       }
     }
   }
-  .info {
+
+  .support{
+    .sectionContainer{
+      .infoDiv{
+        grid-template-columns: repeat(2,1fr);
+        gap: 2rem;
+        margin-top: 5rem;
+        .textDiv{
+          margin-top: 0;
+          grid-template-columns: repeat(1,1fr);
+        }
+      }
+    }
+  }
+
+   .info {
     .infoContainer {
       padding: 0 6rem;
       .titlesDiv {
@@ -960,10 +997,10 @@ h2 {
   .navBar {
     .navBarOne,
     .navBarTwo {
-      padding: 1.5rem 5rem;
+      padding: 1rem 5rem;
     }
     .navBarWithBg {
-      padding: 0 5rem;
+      padding: .5rem 5rem;
     }
   }
   .home {
@@ -979,19 +1016,19 @@ h2 {
         .video {
           height: 100%;
           width: 100%;
-          object-fit: conver;
+          object-fit: cover;
           border-radius: 15rem;
         }
       }
-      .plane{
+      .plane {
         width: 100%;
-        top: -10%; 
+        top: -10%;
       }
     }
   }
-  .search{
-    .sectionContainer{
-      .btns{
+  .search {
+    .sectionContainer {
+      .btns {
         width: 50%;
       }
     }
@@ -999,19 +1036,27 @@ h2 {
 }
 
 @media screen and (min-width: 1106px) {
-  .subscribe{
-    .sectionContainer{
+  .home{
+    .homeImages{
+      .plane{
+        top: -25%;
+        width: 90%;
+      }
+    }
+  }
+  .subscribe {
+    .sectionContainer {
       max-width: 60%;
     }
   }
 }
 
-@media screen and (min-width: 1332px){
-  .navBar{
-    .navBarOne{
-      .menu{
+@media screen and (min-width: 1332px) {
+  .navBar {
+    .navBarOne {
+      .menu {
         gap: 1rem;
-        .listItem{
+        .listItem {
           padding: 0 1.5rem;
           font-size: 14px;
         }
@@ -1019,13 +1064,22 @@ h2 {
     }
   }
 
-  .support{
-    .sectionContainer{
-      .infoDiv{
+  .home{
+    .homeImages{
+      .plane{
+        top: -25%;
+        width: 90%;
+      }
+    }
+  }
+
+  .support {
+    .sectionContainer {
+      .infoDiv {
         gap: 1rem;
-        .textDiv{
-          .singleInfo{
-            p{
+        .textDiv {
+          .singleInfo {
+            p {
               max-width: 500px;
             }
           }
@@ -1034,35 +1088,38 @@ h2 {
     }
   }
 
-  .subscribe{
-    .sectionContainer{
+  .subscribe {
+    .sectionContainer {
       max-width: 50%;
     }
   }
 }
 
-@media screen and (min-width: 1440px){
-  .home{
-    .homeImages{
-      .plane{
+@media screen and (min-width: 1440px) {
+  .home {
+    .homeImages {
+      .videoDiv {
+        border-radius: 10rem;
+      }
+      .plane {
         width: 90%;
-        top:-10%;
+        top: -50%;
       }
     }
   }
 }
 
-::selection{
+::selection {
   background-color: var(--first-color);
   color: var(--first-color);
 }
 
-::-webkit-scrollbar{
+::-webkit-scrollbar {
   width: 10px;
   background-color: var(--grey-bg);
 }
 
-::-webkit-scrollbar-thumb{
+::-webkit-scrollbar-thumb {
   background-color: var(--first-color);
   border-radius: 10px;
 }
